<resources>
    <string name="app_name">IKPMD</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="SearchHint">Title</string>
    <string name="SearchButton">Search</string>
    <string name="PosterImgDescription">Poster Image</string>
    <string name="ImdbRatingLabel">Imdb Rating:</string>
    <string name="YearLabel">Year:</string>
    <string name="TitleLabel">Title:</string>
    <string name="PlotLabel">Plot:</string>
    <string name="ImdbIdLabel">Imdb Id:</string>
    <string name="AddMovieButton">Add Movie To Watchlist</string>
    <string name="ShareButton">Share</string>
    <string name="title_activity_list">Te Kijken Films</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_search">Search</string>
    <string name="search_movie">Search Movie</string>
    <string name="movie_watch_list">Movie Watch List</string>
    <string name="log_out">Log Out</string>
    <string name="remove">Remove from Watchlist</string>
</resources>
